--- a/cardle/public/index.html
+++ b/cardle/public/index.html
@@ -15,7 +15,10 @@
 			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
 			crossorigin="anonymous"
 		/>
-
+		<script
+			src="https://kit.fontawesome.com/beb2141930.js"
+			crossorigin="anonymous"
+		></script>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
@@ -31,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>React App</title>
+		<title>Cardle</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
